demo/migration-source/k8s/70-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: talhas-secrets-viewer
  namespace: talhas-experiments
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/load-balancer-name: talhas-secrets-viewer
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
    alb.ingress.kubernetes.io/subnets: subnet-05dc7def610a5ea33,subnet-0771392f1cd8e4804
    alb.ingress.kubernetes.io/tags: owner=talhas,purpose=migration-demo
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: secrets-viewer
                port:
                  number: 8080
